--- a/html_css/css/flex.css
+++ b/html_css/css/flex.css
@@ -30,14 +30,26 @@
   line-height: 60px;
 }
 
-.fg-1 {
+.fg-1  {
   flex-grow: 1;
 }
 
-.fg-2 {
+.fg-2  {
   flex-grow: 2;
 }
 
-.fg-3 {
+.fg-3  {
   flex-grow: 3;
+}
+
+/* Tablet */
+@media (min-width: 600px) and (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    background: green;
+  }
+}
+
+/* Smartphone */
+@media (max-width: 599px) {
 }
